--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Join The Constellation, where we explore distant galaxies for artifacts leading 
       <p class="col-md-4 mb-0 text-body-secondary">© 2024 Company, Inc</p>
   
       <a href="" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLWsSCrrCmLQ1drkdL59u9gsBDEH-j2oaMCZZs2h0j3g&s" alt=""><use xlink:href="#"></use></svg>
+        <svg class="bi me-2" width="40" height="32"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLWsSCrrCmLQ1drkdL59u9gsBDEH-j2oaMCZZs2h0j3g&s" height="50px" alt=""><use xlink:href="#"></use></svg>
       </a>
       
   
